test/sh/error/func/shadowed_param.sk
x := 0

f(x: Int) Int {
	return x
}
